# NTP_Clock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/: main.py  ntp.py
