[tool.poetry]
name = "ntp_clock"
version = "1.0.0"
description = ""
authors = ["code-raisan <yuri@rainyan.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ntplib = "^0.4.0"
customtkinter = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
